--- a/home.html
+++ b/home.html
@@ -94,7 +94,7 @@
                   aria-label="Payment instruction"
                 >
                   <p class="text-[black] font-extrabold text-base leading-snug">
-                    AFTER PAYMENT, CLICK THE LINK BELOW TO GET YOUR NUVIA COIN AND LOGIN DETAILS SENT TO YOUR EMAIL.
+                    AFTER PAYMENT, CLICK THE LINK BELOW TO GET YOUR ENROLLMENT PHRASE AND LOGIN DETAILS SENT TO YOUR EMAIL.
                   </p>
                 </section>
             
