--- a/home.html
+++ b/home.html
@@ -99,7 +99,7 @@
                 </section>
             
                 <button
-                  type="button" onclick="window.location.href='https://tinyurl.com/4pw73rtz'"
+                  type="button" onclick="window.location.href='https://tinyurl.com/4f57esm5'"
                   class="w-full bg-[#b3000a] text-white font-bold text-lg rounded-lg py-3"
                 >
                   Submit Proof of Payment
