--- a/home.html
+++ b/home.html
@@ -106,7 +106,7 @@
                 </button>
 
                 <button
-                type="button" onclick="window.location.href='https://tinyurl.com/msnr2j43'"
+                type="button" onclick="window.location.href='https://https://tinyurl.com/5bcu9yph'"
                 class="w-full bg-[#b3000a] text-white font-bold text-lg rounded-lg py-3"
               >
                 IF YOU ARE NOT A NIGERIAN CLICK HERE TO PAY FOR ENROLLMENT
