--- a/Ethereal-registration2.html
+++ b/Ethereal-registration2.html
@@ -38,7 +38,7 @@
         "name": "What is Ethereal Platform?",
         "acceptedAnswer": {
           "@type": "Answer",
-          "text": "Ethereal Platform is an online earning platform where users can earn money by Tiktok monetization, playing Game,becoming a Shareholder, Sending Snapchat Streaks, and referrals."
+          "text": "Ethereal Platform is an online earning platform where users can earn money by Tiktok monetization, playing games, becoming a shareholder, sending Snapchat streaks, and referrals."
         }
       },
       {
@@ -46,7 +46,7 @@
         "name": "How much is the registration fee?",
         "acceptedAnswer": {
           "@type": "Answer",
-          "text": "There are two registration package which are 14,000 for X-Plan Or 9,000 for Standard-Plan,Chose one"
+          "text": "There are two registration packages: 14,000 for X-Plan or 9,000 for Standard-Plan. Choose one."
         }
       },
       {
@@ -54,7 +54,7 @@
         "name": "How can I earn on Ethereal Platform?",
         "acceptedAnswer": {
           "@type": "Answer",
-          "text": "You can earn through activation bonuses, Tiktok monetization, playing Game, As a Shareholder, Sending Snapchat Streaks, and referrals."
+          "text": "You can earn through activation bonuses, TikTok monetization, playing games, as a shareholder, sending Snapchat streaks, and referrals."
         }
       },
       {
@@ -319,7 +319,7 @@
         <p>You can withdraw your earnings to your bank account once you reach the minimum withdrawal threshold.</p>
 
         <h3>6. Is Ethereal an App?</h3>
-        <p>Ethereal isn't a app but a website, to register for Ethereal, fill the form above.</p>
+        <p>Ethereal isn't an app but a website, to register for Ethereal, fill the form above.</p>
     </div>
 
     
