Ethereal-registration3.html

--- a/Ethereal-registration3.html
+++ b/Ethereal-registration3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>How To Register | Is Ethereal An App | How To Sign Up, Stream And Earn On Ethereal | Ethereal Account Registration Guide</title>
+    <title>Ethereal Website | Is Ethereal An App | How To Sign Up, And Earn On Ethereal | Ethereal Account Registration Guide</title>
     <meta
       name="description"
       content="Register on Ethereal Platform to earn money online by watching videos, streaming, reviewing, and referrals. Learn about sign-up, activation, withdrawals, and vendor opportunities."
@@ -18,7 +18,7 @@
       {
         "@context": "https://schema.org",
         "@type": "WebPage",
-        "name": "How To Register | Is Ethereal An App | Ethereal Account Registration Guide",
+        "name": " Ethereal Website | How To Register and Earn | Is Ethereal An App | Ethereal Account Registration Guide",
         "url": "https://etherealwebsite.com/Ethereal_registration1",
         "description": "Register on the Ethereal Platform and start earning money online through simple tasks like watching videos, streaming, reviewing, and referrals.",
         "publisher": {
@@ -65,7 +65,7 @@
               "name": "Is Ethereal free to join?",
               "acceptedAnswer": {
                 "@type": "Answer",
-                "text": "Ethereal is free to join with basic registration, but some premium plans or features require payment."
+                "text": "Ethereal is not free to join,it has some premium plans and  features that requires payment."
               }
             },
             {
