--- a/Review.html
+++ b/Review.html
@@ -150,7 +150,7 @@
 
 <div class="button-container">
     <a href="home.html" class="register-btn">
-        PAY NOW 
+        HOW ETHEREAL WEBSITE WORKS 
         <svg viewBox="0 0 24 24">
             <path d="M10 17l5-5-5-5v10z"></path>
         </svg>
