--- a/index.html
+++ b/index.html
@@ -156,10 +156,7 @@
                 </div>
             </div>
         </div>
-      <!--just good test-->
-        <div class="button-style">
-            100 sales - <span class="green">$15</span>
-          </div>
+  
 
         <!--features container -->
         <div class="container2">
@@ -236,7 +233,7 @@
             <figcaption class="vidcaption">
                 <h1 style="font-size: 20px; font-weight: 700; text-align: center; margin: 5px auto;">VIDEO SUMMARY ON HOW Ethereal  WORKS</h1>
                             <p>
-                                Ethereal Stream claims to be a platform where you earn every second by helping artists grow. Just stream songs daily to boost plays on Spotify, Apple, etc.—and earn while solving real problems.</p>
+                              Join Ethereal website, Choose a better package Standard Or Extra Package(₦9k or ₦14k), and start earning daily by posting on TikTok, clicking links, reading, and doing simple online tasks!</p>
     
                    <a href="Review.html"><button class="button-style">Register  <span class="green">Now</span></button></a>
             </figcaption>
