--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
             <figcaption class="vidcaption">
                 <h1 style="font-size: 20px; font-weight: 700; text-align: center; margin: 5px auto;">VIDEO SUMMARY ON HOW Ethereal  WORKS</h1>
                             <p>
-                              Join Ethereal website, Choose a better package Standard Or Extra Package(₦9k or ₦14k), and start earning daily by posting on TikTok, clicking links, reading, and doing simple online tasks!</p>
+                              Join Ethereal website, Choose a better package between Standard and Extra Package(₦9k or ₦14k), and start earning daily by posting on social media like TikTok,Snapchat,WhatsApp,Facebook,Sending Streaks on Snapchat,Playing games, clicking links, reading,as a shareholder you can earn as the company grows, acquire digital skills for free as a member doing simple online tasks!</p>
     
                    <a href="Review.html"><button class="button-style">Register  <span class="green">Now</span></button></a>
             </figcaption>
