--- a/index.html
+++ b/index.html
@@ -232,8 +232,9 @@
             <video src="ethereal-vid1.mp4" controls></video>
             <figcaption class="vidcaption">
                 <h1 style="font-size: 20px; font-weight: 700; text-align: center; margin: 5px auto;">VIDEO SUMMARY ON HOW Ethereal  WORKS</h1>
-                            <p>
-                              Join Ethereal website, Choose a better package between Standard and Extra Package(₦9k or ₦14k), and start earning daily by posting on social media like TikTok,Snapchat,WhatsApp,Facebook,Sending Streaks on Snapchat,Playing games, clicking links, reading,as a shareholder you can earn as the company grows, acquire digital skills for free as a member doing simple online tasks!</p>
+                            <p>Join the Ethereal Website today! Choose a better package between the Standard (₦9,000) or Extra Package (₦14,000) and start earning daily just by posting on social media platforms like TikTok, Snapchat, WhatsApp, and Facebook.You can also earn by: Sending streaks on Snapchat, Playing games, Clicking links,Reading articles
+As a shareholder, you earn more as the company grows. Plus, you’ll get free access to digital skills training as a member. You can even make extra money by doing simple online tasks every day!
+Start now and turn your phone into a money-making tool!</p>
     
                    <a href="Review.html"><button class="button-style">Register  <span class="green">Now</span></button></a>
             </figcaption>
