--- a/index.html
+++ b/index.html
@@ -248,10 +248,14 @@ Start now and turn your phone into a money-making tool!</p>
         animation-fill-mode: forwards;">
             <video src="ethereal-vid2.mp4" controls></video>
             <figcaption class="vidcaption">
-                <h1 style="font-size: 20px; font-weight: 700; text-align: center; margin: 5px auto;">Ethereal Stream Collaboration</h1>
-                            <p>
-                         Ethereal Stream claims to be backed by Sabinus “The Investor” as brand ambassador—he sees the vision. Music pays, wealth has shifted, and Ethereal is where smart creators are cashing in early.
-                            </p>
+                <h1 style="font-size: 20px; font-weight: 700; text-align: center; margin: 5px auto;">HOW TO REGISTER AND EARN ON ETHEREAL(NO CERTIFICATE)</h1>
+                            <p>Gone are those days where you are required and was made compulsory for you to have formal education and certificates before you can Earn decently! Those are in the past as priorities in wealth creation has shifted overtime!
+
+You do not need need a certificate or formal education to Earn unlimited daily rewards and it is simply what Ethereal has done justice to! No matter your level of your formal education, all these do not matter on Ethereal!
+
+ Connect with Ethereal, Get paid for every social action! Earn daily cash rewards Unlimitedly.
+
+9 Mentor  </p>
                             <a href="Review.html"><button class="button-style">Register  <span class="green">Now</span></button></a>
             </figcaption>
         </figure>
