--- a/index.html
+++ b/index.html
@@ -248,14 +248,13 @@ Start now and turn your phone into a money-making tool!</p>
         animation-fill-mode: forwards;">
             <video src="ethereal-vid2.mp4" controls></video>
             <figcaption class="vidcaption">
-                <h1 style="font-size: 20px; font-weight: 700; text-align: center; margin: 5px auto;">HOW TO REGISTER AND EARN ON ETHEREAL(NO CERTIFICATE)</h1>
-                            <p>Gone are those days where you are required and was made compulsory for you to have formal education and certificates before you can Earn decently! Those are in the past as priorities in wealth creation has shifted overtime!
+                <h1 style="font-size: 20px; font-weight: 700; text-align: center; margin: 5px auto;">HOW TO REGISTER AND EARN ON ETHEREAL(NO CERTIFICATE REQUIRED)</h1>
+                            <p>
+Gone are the days when having formal education and certificates was compulsory before you could earn a decent living. That time has passed! The priorities for creating wealth have shifted over time.
 
-You do not need need a certificate or formal education to Earn unlimited daily rewards and it is simply what Ethereal has done justice to! No matter your level of your formal education, all these do not matter on Ethereal!
+You don’t need a certificate or formal education to earn unlimited daily rewards—and that’s exactly what Ethereal has made possible. No matter your level of education, it doesn’t stop you from earning on Ethereal!
 
- Connect with Ethereal, Get paid for every social action! Earn daily cash rewards Unlimitedly.
-
-9 Mentor  </p>
+Connect with Ethereal. Get paid for every social action. Earn unlimited daily cash rewards.</p>
                             <a href="Review.html"><button class="button-style">Register  <span class="green">Now</span></button></a>
             </figcaption>
         </figure>
