--- a/Review.html
+++ b/Review.html
@@ -339,7 +339,7 @@
       <li>• Get added to the VIP success group</li>
     </ul>
     <a href="home.html" target="_blank">
-      <button>CLICK HERE TO PAY FOR STANDARD PLAN</button> <!-- Open Register Modal -->
+      <button>CLICK HERE TO REGISTER FOR EXTRA PACKAGE</button> <!-- Open Register Modal -->
     </a>         
 </div>
 
@@ -368,7 +368,7 @@
   <p>✔ Daily Earnings & Flash Claim Rewards are Claimed automatically by personal AI allocated to you.</p>
   
   <a href="home.html" target="_blank">
-    <button>CLICK TO PAY FROM ANY COUNTRY</button> <!-- Open Register Modal -->
+    <button>CLICK TO REGISTER FROM ANY COUNTRY</button> <!-- Open Register Modal -->
 </a>
   </div>
   
