--- a/Review.html
+++ b/Review.html
@@ -253,7 +253,7 @@
   </ul>
   <p>🔹 6-Month Membership Access – Your account stays active for half a year, and you can renew after that.</p>
 
-  <a href="https://linktr.ee/delux_platform.com" target="_blank">
+  <a href="https://linktr.ee/EtherealWebsite.Com" target="_blank">
     <button>CLICK TO REGISTER (STANDARD PLAN)</button>
   </a>
 </div>
@@ -338,8 +338,8 @@
       <li>• Start earning DAILY</li>
       <li>• Get added to the VIP success group</li>
     </ul>
-    <a href="https://linktr.ee/delux_platform.com" target="_blank">
-      <button>CLICK HERE TO REGISTER FOR EXTRA PACKAGE</button> <!-- Open Register Modal -->
+    <a href="https://linktr.ee/EtherealWebsite.Com" target="_blank">
+      <button>CLICK HERE TO REGISTER (EXTRA PACKAGE)</button> <!-- Open Register Modal -->
     </a>         
 </div>
 
@@ -367,7 +367,7 @@
   <h2>◽ETHEREAL - X PLAN ( N14,000)</h2>
   <p>✔ Daily Earnings & Flash Claim Rewards are Claimed automatically by personal AI allocated to you.</p>
   
-  <a href="home.html" target="_blank">
+  <a href="https://linktr.ee/EtherealWebsite.Com" target="_blank">
     <button>CLICK TO REGISTER FROM ANY COUNTRY</button> <!-- Open Register Modal -->
 </a>
   </div>
