--- a/Review.html
+++ b/Review.html
@@ -253,7 +253,7 @@
   </ul>
   <p>🔹 6-Month Membership Access – Your account stays active for half a year, and you can renew after that.</p>
 
-  <a href="https://linktr.ee/EtherealWebsite.Com" target="_blank">
+  <a href="https://wa.me/2348157823869?text=I%20am%20ready%20to%20register%20for%20the%20%E2%82%A69%2C000%20package.%0A%0AI%20agree%20to%20the%20terms%20and%20conditions%20stated%20below%3A%0A%0A1.%20All%20instructions%20must%20be%20followed%20strictly.%0A2.%20Our%20terms%20and%20conditions%20are%20updated%20weekly.%0A3.%20Your%20payment%20gives%20you%20access%20to%20your%20dashboard%2C%20and%20performing%20your%20assigned%20tasks%20correctly%20ensures%20a%20successful%20withdrawal.%0A4.%20The%20%E2%82%A69%2C000%20upfront%20payment%20is%20valid%20for%206%20months%20and%20requires%20renewal%20when%20due.%0A5.%20After%20successful%20registration%2C%20you%20will%20learn%20how%20to%20earn%20%E2%82%A6500%2C000%20monthly%E2%80%94and%20if%20you%20apply%20what%20you%20learn%2C%20you%20can%20achieve%20the%20same%20results.%0A%0ANOTE%3A%20This%20package%20is%20basic%2C%20and%20you%20may%20face%20some%20difficulty%20completing%20tasks.%20However%2C%20if%20you%20can%E2%80%99t%20afford%20the%20%E2%82%A614%2C000%20package%20now%2C%20you%20can%20start%20with%20the%20%E2%82%A69%2C000%20package%20and%20upgrade%20later." target="_blank">
     <button>CLICK TO REGISTER (STANDARD PLAN)</button>
   </a>
 </div>
@@ -338,7 +338,7 @@
       <li>• Start earning DAILY</li>
       <li>• Get added to the VIP success group</li>
     </ul>
-    <a href="https://linktr.ee/EtherealWebsite.Com" target="_blank">
+    <a href="https://wa.me/2348157823869?text=I%20am%20ready%20to%20register%20for%20the%20%E2%82%A614%2C000%20package.%0A%0AI%20agree%20to%20the%20terms%20and%20conditions%20below%3A%0A1.%20All%20instructions%20must%20be%20followed%20strictly.%0A2.%20We%20update%20our%20terms%20and%20conditions%20weekly.%0A3.%20Your%20payment%20gives%20you%20access%20to%20your%20dashboard%2C%20and%20performing%20your%20assigned%20tasks%20aids%20successful%20withdrawal.%0A4.%20The%20upfront%20payment%20of%20%E2%82%A614%2C000%20is%20valid%20for%201%20year%20and%20requires%20renewal%20when%20due.%0A5.%20You%20will%20learn%20how%20to%20earn%20%E2%82%A61%20million%20monthly%20after%20successful%20registration%20and%20can%20get%20the%20same%20result%20if%20you%20apply%20what%20you%20learnt." target="_blank">
       <button>CLICK HERE TO REGISTER (EXTRA PACKAGE)</button> <!-- Open Register Modal -->
     </a>         
 </div>
