--- a/Review.html
+++ b/Review.html
@@ -139,7 +139,7 @@
         <div class="video-container">
             <div id="sales-commission" class="tab-content active">
                 <video autoplay="" loop="" playsinline="" controls="" muted="" class="appl1-hdvd-xx">
-                    <source src="welcome.mp4" type="video/mp4"> <!-- Local video file -->
+                    <source src="ETHEREAL-VID.mp4" type="video/mp4"> <!-- Local video file -->
                     Your browser does not support the video tag.
                 </video>
                  <!-- Open Register Modal -->
@@ -226,7 +226,7 @@
 
         <!-- About Section -->
 <div class="about-section">
-
+  <img src="ETHEREAL-PIC.jpg" alt="Ethereal Standard Plan" class="about-image">
   <h2>💰 Start Earning Daily in Dollars with Ethereal Platform</h2>
 
   <p>Are you tired of wasting time online without getting anything in return? What if you could get paid in real money (USD or Naira) just for doing what you already do every day—watching videos, reading, playing games, sharing posts, or clicking links?</p>
@@ -372,7 +372,23 @@
 </a>
   </div>
   
+       <div class="container">
+        <!-- Header Section -->
+       <!-- <div class="header">
+            <img src="nuvia-stream-logo.png" alt="Nuviastream It Logo"> 
+            <button onclick="openRegisterModal()"><img src="https://nuviamusics.com/images/people-outline.svg" class="" alt="TikTok"> Register Now</button> 
+        </div>-->
 
+        <!-- Video Section -->
+        <div class="video-container">
+            <div id="sales-commission" class="tab-content active">
+                <video autoplay="" loop="" playsinline="" controls="" muted="" class="appl1-hdvd-xx">
+                    <source src="ETHEREAL-VID5.mp4" type="video/mp4"> <!-- Local video file -->
+                    Your browser does not support the video tag.
+                </video>
+                 <!-- Open Register Modal -->
+            </div>
+        </div>
 
         <!-- Registration Section -->
         <div class="registration-section">
