--- a/Review.html
+++ b/Review.html
@@ -149,7 +149,7 @@
 
 
 <div class="button-container">
-    <a href="home.html" class="register-btn">
+    <a href="#targetto" class="register-btn">
         HOW ETHEREAL WEBSITE WORKS 
         <svg viewBox="0 0 24 24">
             <path d="M10 17l5-5-5-5v10z"></path>
@@ -263,7 +263,7 @@
       <div class="about-section">
 
     <img src="Ethereal-X-Plan.jpg" alt="ethereal X Plan" class="about-image">
-    <p>🔥 ₦14,000 XTRA PACKAGE – 1-Year VIP Plan</p>
+    <p class="targetto">🔥 ₦14,000 XTRA PACKAGE – 1-Year VIP Plan</p>
     <p>For only ₦14,000, you get EVERYTHING in the Standard Plan—plus much more!</p>
     
     <p>🔸 $12 Activation Bonus (You will receive $12 after successful Ethereal registration) + 5 GB Free Data – Immediate credit to your wallet and internet to start fast.</p>
