--- a/Review.html
+++ b/Review.html
@@ -253,8 +253,8 @@
   </ul>
   <p>🔹 6-Month Membership Access – Your account stays active for half a year, and you can renew after that.</p>
 
-  <a href="https://wa.me/2348157823869?text=I%20am%20ready%20to%20register%20for%20the%20%E2%82%A69%2C000%20package." target="_blank">
-    <button>CLICK TO REGISTER (STANDARD PLAN)</button>
+  <a href="home.html" target="_blank">
+    <button>START (STANDARD PLAN)</button>
   </a>
 </div>
 
@@ -338,8 +338,8 @@
       <li>• Start earning DAILY</li>
       <li>• Get added to the VIP success group</li>
     </ul>
-    <a href="https://wa.me/2348157823869?text=I%20am%20ready%20to%20register%20for%20the%20%E2%82%A614%2C000%20package." target="_blank">
-      <button>CLICK HERE TO REGISTER (EXTRA PACKAGE)</button> <!-- Open Register Modal -->
+    <a href="home.html" target="_blank">
+      <button>START EARNING(EXTRA PACKAGE)</button> <!-- Open Register Modal -->
     </a>         
 </div>
 
@@ -368,7 +368,7 @@
   <p>✔ Daily Earnings & Flash Claim Rewards are Claimed automatically by personal AI allocated to you.</p>
   
   <a href="https://linktr.ee/EtherealWebsite.Com" target="_blank">
-    <button>CLICK TO REGISTER FROM ANY COUNTRY</button> <!-- Open Register Modal -->
+    <button>IF YOU ARE NOT FROM NIGERIA CLICK HERE TO REGISTER</button> <!-- Open Register Modal -->
 </a>
   </div>
   
