Ethereal-registration1.html

--- a/Ethereal-registration1.html
+++ b/Ethereal-registration1.html
@@ -3,27 +3,68 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>How To Register | Is Ethereal An App | How To Sign Up, Stream And Earn On Ethereal  | Ethereal stream Account Registration Guide</title>
-    <meta name="description" content="Register on Ethereal Platform to earn money online by watching videos, streaming, reviewing, and referrals. Learn about sign-up, activation, withdrawals, and vendor opportunities.">
-    <meta name="keywords" content="Ethereal registration, earn online, smartphone jobs, Ethereal withdrawal, make money online">
-    <meta name="author" content="Ethereal Streams Platform">
+    <title>Register on Ethereal Platform | Earn Online from Daily Tasks | Etherealweb.site Official Signup</title>
+    <meta name="description" content="Register on Etherealweb.site to earn money online through simple tasks like reading posts, playing games like Candy Crush, sending Snapchat streaks, and clicking links. No referrals required to start earning. Join now and claim your discount.">
+    <meta name="keywords" content="Etherealweb.site, Ethereal Platform, Ethereal App, Ethereal registration, Ethereal website, earn online in Nigeria, Candy Crush earning app, Snapchat streak earnings, sign up on Ethereal, how to register on etherealweb.site, ethereal stream platform, ethereal login, make money with ethereal">
+    <meta name="author" content="Etherealweb.site Team">
     <link rel="shortcut icon" href="ethereal-short-cut-logo.png" type=".png">
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://www.etherealwebsite.com/Ethereal-registration1.html">
 
+     <!-- Open Graph Meta Tags for Facebook, LinkedIn, WhatsApp -->
+     <meta property="og:type" content="website">
+     <meta property="og:title" content="Join Ethereal Platform & Start Earning Online Today">
+     <meta property="og:description" content="Register on Etherealweb.site to earn daily from simple tasks like reading posts, playing games, and sending Snapchat streaks. No referrals needed. Discount ends soon!">
+     <meta property="og:url" content="https://etherealwebsite.com/Ethereal_registration1">
+     <meta property="og:image" content="https://etherealwebsite.com/images/ETHEREAL-PIC.jpg">
+     <meta property="og:site_name" content="Ethereal Platform">
+
+     <!-- Twitter Card Meta Tags -->
+     <meta name="twitter:card" content="summary_large_image">
+     <meta name="twitter:title" content="Register on Ethereal and Start Earning with Just Your Phone">
+     <meta name="twitter:description" content="Earn up to ₦500,000 weekly on Ethereal by doing simple tasks—no referrals needed. Join today on Etherealweb.site and unlock your bonus.">
+     <meta name="twitter:image" content="https://etherealwebsite.com/images/ETHEREAL-PIC.jpg">
+     <meta name="twitter:url" content="https://etherealwebsite.com/Ethereal_registration1">
+     <meta name="twitter:creator" content="@EtherealWebApp">
+
+
+
+    
     <script type="application/ld+json">
-        {
+{
   "@context": "https://schema.org",
   "@type": "WebPage",
-  "name": "How To Register | Is Ethereal An App | How To Sign Up, Stream And Earn On Ethereal | Ethereal Account Registration Guide",
+  "name": "Register on Ethereal Platform | Ethereal App | How to Sign Up and Earn on Ethereal Website",
   "url": "https://etherealwebsite.com/Ethereal_registration1",
-  "description": "Register on the Ethereal Platform and start earning money online through simple tasks like watching videos, streaming, reviewing, and referrals.",
+  "description": "Register on the Ethereal Platform and start earning by reading posts, playing games like Candy Crush, sending Snapchat streaks, and clicking links. No referrals needed.",
+  "keywords": [
+    "Etherealweb.site",
+    "Ethereal Platform",
+    "Ethereal App",
+    "Ethereal Website",
+    "How to register on Ethereal",
+    "Is Ethereal legit?",
+    "Earn money online with Ethereal",
+    "Ethereal registration link",
+    "Ethereal Platform review",
+    "How to earn from Ethereal",
+    "Ethereal app download",
+    "Ethereal sign-up process",
+    "Ethereal Platform Nigeria",
+    "Daily tasks to earn money online"
+  ],
   "publisher": {
     "@type": "Organization",
     "name": "Ethereal Platform",
     "url": "https://etherealwebsite.com",
     "logo": "https://etherealwebsite.com/Ethereal-logo.png",
-    "description": "An online earning platform where users can make money by completing simple activities."
+    "description": "Ethereal is a digital earning platform where users make money online by doing daily tasks like reading posts, playing games, and sharing links.",
+    "sameAs": [
+      "https://etherealwebsite.com",
+      "https://linktr.ee/Ethereal_registration",
+      "https://facebook.com/EtherealPlatform",
+      "https://twitter.com/EtherealWebApp"
+    ]
   },
   "potentialAction": {
     "@type": "Action",
@@ -38,7 +79,7 @@
         "name": "What is Ethereal Platform?",
         "acceptedAnswer": {
           "@type": "Answer",
-          "text": "Ethereal Platform is an online earning platform where users can earn money by Tiktok monetization, playing Game,becoming a Shareholder, Sending Snapchat Streaks, and referrals."
+          "text": "Ethereal rewards you for simple daily activities — like reading posts, playing games (e.g., Candy Crush), sending Snapchat streaks, and clicking links."
         }
       },
       {
@@ -46,7 +87,7 @@
         "name": "How much is the registration fee?",
         "acceptedAnswer": {
           "@type": "Answer",
-          "text": "There are two registration package which are 14,000 for X-Plan Or 9,000 for Standard-Plan,Chose one"
+          "text": "The registration fee is 14,000 or 9,000 depending on your selected package. It gives you access to all earning opportunities on the platform."
         }
       },
       {
@@ -54,7 +95,7 @@
         "name": "How can I earn on Ethereal Platform?",
         "acceptedAnswer": {
           "@type": "Answer",
-          "text": "You can earn through activation bonuses, Tiktok monetization, playing Game, As a Shareholder, Sending Snapchat Streaks, and referrals."
+          "text": "You earn by completing simple tasks like reading posts, playing games like Candy Crush, sending Snapchat streaks, and clicking links."
         }
       },
       {
@@ -62,7 +103,7 @@
         "name": "Do I need referrals to earn?",
         "acceptedAnswer": {
           "@type": "Answer",
-          "text": "No, you can earn without referrals, but referring others increases your earnings."
+          "text": "No, referrals are not required to earn. However, referring others helps increase your earnings."
         }
       },
       {
@@ -70,7 +111,7 @@
         "name": "How do I withdraw my earnings from Ethereal?",
         "acceptedAnswer": {
           "@type": "Answer",
-          "text": "You can withdraw your earnings to your bank account once you reach the minimum withdrawal threshold."
+          "text": "You can withdraw directly to your bank account once you meet the minimum withdrawal requirement."
         }
       },
       {
@@ -78,13 +119,14 @@
         "name": "Is Ethereal an app?",
         "acceptedAnswer": {
           "@type": "Answer",
-          "text": "Ethereal isn't an app but a website. To register for Ethereal, fill out the form above."
+          "text": "Ethereal functions as both a web-based platform and a mobile-friendly app-like interface. You can register and start earning online through the Ethereal website."
         }
       }
     ]
   }
 }
-        </script>                       
+</script>
+
         <style>
           body {
               background: radial-gradient(ellipse at bottom left, #00FF66 0%, #003322 40%, #001F1A 80%, #000F0C 100%);
