Ethereal-registration2.html

--- a/Ethereal-registration2.html
+++ b/Ethereal-registration2.html
@@ -3,88 +3,144 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>How To Register | Is Ethereal An App | How To Sign Up, Stream And Earn On Ethereal  | Ethereal stream Account Registration Guide</title>
-    <meta name="description" content="Register on Ethereal Platform to earn money online by watching videos, streaming, reviewing, and referrals. Learn about sign-up, activation, withdrawals, and vendor opportunities.">
-    <meta name="keywords" content="Ethereal registration, earn online, smartphone jobs, Ethereal withdrawal, make money online">
-    <meta name="author" content="Ethereal Streams Platform">
+    <title>Ethereal Platform | Earn Online from Daily Tasks | Etherealweb.site Official Signup</title>
+    <meta name="description" content="Register on Etherealweb.site to earn money online through simple tasks like reading posts, playing games like Candy Crush, sending Snapchat streaks, and clicking links. No referrals required to start earning. Join now and claim your discount.">
+    <meta name="keywords" content="Etherealweb.site, Ethereal Platform, Ethereal App, Ethereal registration, Ethereal website, earn online in Nigeria, Candy Crush earning app, Snapchat streak earnings, sign up on Ethereal, how to register on etherealweb.site, ethereal stream platform, ethereal login, make money with ethereal">
+    <meta name="author" content="Etherealweb.site Team">
+
     <link rel="shortcut icon" href="ethereal-short-cut-logo.png" type=".png">
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://www.etherealwebsite.com/Ethereal-registration1.html">
 
+    
+    <!-- Open Graph Meta Tags for Facebook, LinkedIn, WhatsApp -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Join Ethereal Platform & Start Earning Online Today">
+    <meta property="og:description" content="Register on Etherealweb.site to earn daily from simple tasks like reading posts, playing games, and sending Snapchat streaks. No referrals needed. Discount ends soon!">
+    <meta property="og:url" content="https://etherealwebsite.com/Ethereal_registration2">
+    <meta property="og:image" content="https://etherealwebsite.com/images/ETHEREAL-PIC.jpg">
+    <meta property="og:site_name" content="Ethereal Platform">
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Register on Ethereal and Start Earning with Just Your Phone">
+    <meta name="twitter:description" content="Earn up to ₦500,000 weekly on Ethereal by doing simple tasks—no referrals needed. Join today on Etherealweb.site and unlock your bonus.">
+    <meta name="twitter:image" content="https://etherealwebsite.com/images/ETHEREAL-PIC.jpg">
+    <meta name="twitter:url" content="https://etherealwebsite.com/Ethereal_registration2">
+    <meta name="twitter:creator" content="@EtherealWebApp">
+
     <script type="application/ld+json">
-        {
+{
   "@context": "https://schema.org",
-  "@type": "WebPage",
-  "name": "How To Register | Is Ethereal An App | How To Sign Up, Stream And Earn On Ethereal | Ethereal Account Registration Guide",
-  "url": "https://etherealwebsite.com/Ethereal_registration1",
-  "description": "Register on the Ethereal Platform and start earning money online through simple tasks like watching videos, streaming, reviewing, and referrals.",
-  "publisher": {
-    "@type": "Organization",
-    "name": "Ethereal Platform",
-    "url": "https://etherealwebsite.com",
-    "logo": "https://etherealwebsite.com/Ethereal-logo.png",
-    "description": "An online earning platform where users can make money by completing simple activities."
-  },
-  "potentialAction": {
-    "@type": "Action",
-    "name": "Register on Ethereal Platform",
-    "url": "https://linktr.ee/Ethereal_registration"
-  },
-  "mainEntity": {
-    "@type": "FAQPage",
-    "mainEntity": [
-      {
-        "@type": "Question",
-        "name": "What is Ethereal Platform?",
-        "acceptedAnswer": {
-          "@type": "Answer",
-          "text": "Ethereal Platform is an online earning platform where users can earn money by Tiktok monetization, playing games, becoming a shareholder, sending Snapchat streaks, and referrals."
-        }
-      },
-      {
-        "@type": "Question",
-        "name": "How much is the registration fee?",
-        "acceptedAnswer": {
-          "@type": "Answer",
-          "text": "There are two registration packages: 14,000 for X-Plan or 9,000 for Standard-Plan. Choose one."
-        }
-      },
-      {
-        "@type": "Question",
-        "name": "How can I earn on Ethereal Platform?",
-        "acceptedAnswer": {
-          "@type": "Answer",
-          "text": "You can earn through activation bonuses, TikTok monetization, playing games, as a shareholder, sending Snapchat streaks, and referrals."
-        }
-      },
-      {
-        "@type": "Question",
-        "name": "Do I need referrals to earn?",
-        "acceptedAnswer": {
-          "@type": "Answer",
-          "text": "No, you can earn without referrals, but referring others increases your earnings."
-        }
-      },
-      {
-        "@type": "Question",
-        "name": "How do I withdraw my earnings from Ethereal?",
-        "acceptedAnswer": {
-          "@type": "Answer",
-          "text": "You can withdraw your earnings to your bank account once you reach the minimum withdrawal threshold."
-        }
-      },
-      {
-        "@type": "Question",
-        "name": "Is Ethereal an app?",
-        "acceptedAnswer": {
-          "@type": "Answer",
-          "text": "Ethereal isn't an app but a website. To register for Ethereal, fill out the form above."
-        }
+  "@graph": [
+    {
+      "@type": "WebPage",
+      "@id": "https://etherealwebsite.com/Ethereal_registration2",
+      "name": "Register on Ethereal Platform | Earn Daily with Etherealweb.site",
+      "url": "https://etherealwebsite.com/Ethereal_registration2",
+      "description": "Register on Etherealweb.site and earn daily from simple tasks like reading posts, playing games, and sending Snapchat streaks. No referrals needed. Instant earnings.",
+      "inLanguage": "en",
+      "isPartOf": {
+        "@type": "WebSite",
+        "@id": "https://etherealwebsite.com",
+        "name": "Ethereal Platform",
+        "url": "https://etherealwebsite.com"
       }
-    ]
-  }
+    },
+    {
+      "@type": "Organization",
+      "@id": "https://etherealwebsite.com/#organization",
+      "name": "Ethereal Platform",
+      "url": "https://etherealwebsite.com",
+      "logo": {
+        "@type": "ImageObject",
+        "url": "https://etherealwebsite.com/images/ethereal-logo-green.png"
+      },
+      "sameAs": [
+        "https://facebook.com/EtherealPlatform",
+        "https://twitter.com/EtherealWebApp",
+        "https://linktr.ee/Ethereal_registration"
+      ]
+    },
+    {
+      "@type": "BreadcrumbList",
+      "itemListElement": [
+        {
+          "@type": "ListItem",
+          "position": 1,
+          "name": "Home",
+          "item": "https://etherealwebsite.com"
+        },
+        {
+          "@type": "ListItem",
+          "position": 2,
+          "name": "Register",
+          "item": "https://etherealwebsite.com/Ethereal_registration1"
+        }
+      ]
+    },
+    {
+      "@type": "FAQPage",
+      "mainEntity": [
+        {
+          "@type": "Question",
+          "name": "What is Ethereal Platform?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Ethereal rewards users for completing simple daily tasks like reading posts, playing Candy Crush, sending Snapchat streaks, and clicking links."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "How much is the registration fee?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "The fee is ₦14,000 for X-Plan or ₦9,000 for Standard Plan. Both grant access to all earning opportunities."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Do I need referrals to earn?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "No, you can earn without referrals. Referrals are optional but increase your earnings."
+          }
+        }
+      ]
+    },
+    {
+      "@type": "Product",
+      "name": "Ethereal Registration",
+      "image": "https://etherealwebsite.com/images/ethereal-logo-green.png",
+      "description": "Register now on Ethereal and earn daily. Limited-time discount for new users.",
+      "brand": {
+        "@type": "Brand",
+        "name": "Ethereal Platform"
+      },
+      "offers": {
+        "@type": "Offer",
+        "url": "https://etherealwebsite.com/Ethereal_registration1",
+        "priceCurrency": "NGN",
+        "price": "9000",
+        "priceValidUntil": "2025-12-31",
+        "availability": "https://schema.org/InStock"
+      }
+    },
+    {
+      "@type": "AggregateRating",
+      "itemReviewed": {
+        "@type": "Product",
+        "name": "Ethereal Platform"
+      },
+      "ratingValue": "4.8",
+      "bestRating": "5",
+      "worstRating": "1",
+      "reviewCount": "2587"
+    }
+  ]
 }
-        </script>                       
+</script>
+                       
         <style>
           body {
               background: radial-gradient(ellipse at bottom left, #00FF66 0%, #003322 40%, #001F1A 80%, #000F0C 100%);
